# zea

./: .gitignore  Cargo.toml  LICENSE  README.md  example_tokens.txt  langspec.md  test.c
examples/artii/: fizzbuzz.zea  rationale.md  variables.zea
examples/penguin/: controlflow.zea  optionals.zea  patternmatching.zea  slices.zea  test.c
src/: main.rs  visualize_parse_tree.rs
src/analysis/: mod.rs
src/ast/: c_ast.rs  cformatting.rs  datatype.rs  expression.rs  mod.rs  patterns.rs  statement.rs  test_utils.rs  toplevel.rs  utils.rs
src/ast/c/: datatype.rs  expression.rs  mod.rs  statement.rs
src/ast/zea/: expression.rs  mod.rs  statement.rs  test_utils.rs
src/codegen/: c_ast.rs  error.rs  expr.rs  mod.rs  stmt.rs  symbollowering.rs
src/codegen/lowering/: error.rs  mod.rs
src/driver/: mod.rs
src/eval/: evalexpr.rs  evalstmt.rs  mod.rs  typecheck.rs
src/lowering/: codegen.rs  mod.rs
src/parser/: mod.rs
src/visualisation/: first_lowering.rs  initial_parsing.rs  mod.rs
vizoxide/: Cargo.toml  graphviz  graphviz-sys  readme.md
vizoxide/src/: attr.rs  error.rs  graph.rs  layout.rs  lib.rs  render.rs
zea-ast/: Cargo.toml
zea-ast/src/: cformatting.rs  datatype.rs  expression.rs  helper_impls.rs  lib.rs  patterns.rs  statement.rs  toplevel.rs  utils.rs  visualisation.rs
zea-ast/src/c/: datatype.rs  expression.rs  mod.rs  statement.rs
zea-ast/src/visualisation/: first_lowering.rs  initial_parsing.rs  mod.rs
zea-ast/src/zea/: datatype.rs  expression.rs  mod.rs  nodeexpansion.rs  statement.rs  test_utils.rs
zea-ast/src/zea/lowering/: mod.rs  nodeexpansion.rs  symbollowering.rs
zea-ast/src/zea/typecheck/: mod.rs
zea-ast/src/zea/visitors/: altering.rs  annotating.rs  mod.rs
zea-ast/vizoxide/: Cargo.toml
zea-codegen/: Cargo.toml
zea-codegen/src/: lib.rs  node_c_conversion.rs
zea-driver/: Cargo.toml  test.zea
zea-driver/src/: main.rs
zea-internal-macros/: Cargo.toml
zea-macros/: Cargo.toml
zea-macros/src/: lib.rs
zea-parser/: Cargo.toml  build.rs  expression.lalrpop  grammar.lalrpop
zea-parser/src/: error.rs  expression.rs  lib.rs  statement.rs  token.rs
zea-parser/tests/: tests.rs
zea-parser/tests/dummy_programs/: basic_main.zea  basic_main_with_globs.zea  wrong_main_no_body
zea-static-analysis/: Cargo.toml
zea-static-analysis/src/: dag.rs  lib.rs
