[package]
name = "vizoxide"
version = "1.0.5"
edition = "2021"
license = "MIT"
authors = ["Kenan Sulayman <kenan@sly.mn>"]
description = "Vizoxide is a high-level Rust wrapper for Graphviz that provides an idiomatic, builder-pattern interface for creating, styling, laying out, and rendering complex graphs in various output formats."
readme = "readme.md"
repository = "https://github.com/19h/vizoxide"
documentation = "https://docs.rs/vizoxide"

keywords = ["graphviz", "visualization", "layout", "rendering", "diagram"]

[lib]
path = "src/lib.rs"

[dependencies]
base64 = "0.22.1"
graphviz-sys = "^1"

[dev-dependencies]
tempfile = "3.10.1"